Changelog for GEMC

12/2/15
- added reference in the code to cosmic model
- added ADC e TDC in ft_hodo

11/30/15
- init run number with option map by default
- fixed beam log
- do not init hit process routines at start, waiting until end of first event
- text materials are now backward compatible
- merged ec and pcal hit process from Cole Smith. Instantiation of those constants class with -1.
- commented out screen log (will need a verbosity mechanism though)
- RUNNO -help shows default of 1

11/25/15
- fixed replicas routines.

11/19/15
- fixed vertex for cosmic rays

11/18/15
- added Trigger Summary plot and option in the dropdown menu

11/17/15
- accessing CCDB database in ftof digitization routine

11/16/15
- default runNo set to 1 (fixed case when in GUI mode a different runno was set)
- added COSMICAREA option to define the area where the cosmic ray will go through,
  in the form (x, y, z) and radius.

11/13/15
- added COSMICRAYS option, small utility macro to show the distribution
- removed some unnecessary variables in MPRimaryGeneratorAction

11/12/15
- added graphing of the FADC signal. The shape and intensity of the signal should be optimized for each detector
- trigger signal added to hit
- display of trigger added to trigger gui
- dropdown menu to decide to plot voltage, trigger, or both

11/10/15
- graphs now are handled by a separate library
- fixed graphs limits

11/6/15
- added bunch sampling of the voltage vs signal time. Data structure name is quantumS, map<int, int>
- added TSAMPLING option: first number is time interval of sampling (typically 4 ns for FADC)
  and the second number is the total event time

11/5/15
- Making sure the numeric conditions on reading maps is the en_US
some other country may interpret the dot or commas differently (e.g. 1.0 is 1,0 in some country)

11/3/15
- time resolution is an external parameter "VTRESOLUTION"
- fixed production threshold for flux detectors (Zhiwen), was 1000 eV should be 1mm

11/2/15