@@ -155,6 +155,8 @@ void MEventAction::EndOfEventAction(const G4Event* evt)
 		trajectoryContainer = evt->GetTrajectoryContainer();
 		momDaugther.clear();
 		
+		cout << " >> Total number of tracks " << trajectoryContainer->size() << endl;
+
 		while(trajectoryContainer && track_db.size())
 		{
 			// looping over all tracks
